# Qupath_to_LMD

./: .gitignore  20230308_QuPath_to_LMD-Copy1.ipynb  20230308_QuPath_to_LMD.ipynb  20230406_QuPath_to_LMD_MouseHearts.ipynb  20231204_QCed_geojson.csv  20231204_calib_points.csv  CONTRIBUTING.md  Dockerfile  Feature_2.ipynb  GEMINI_README.md  QCed_geojson.csv  QuPath_to_LMD copy.ipynb  QuPath_to_LMD.ipynb  QuPath_to_LMD_debugging.ipynb  README.md  TD_01_verysmall_mIF._384_wellplate.csv  TD_01_verysmall_mIF.xml  known_bugs  main.py  output.txt  pyproject.toml  python_functions.py  requirements.txt  run_python_function.py  saw_MK.txt  scDVP_logic.md  streamlit_app.py  test_input._384_wellplate.csv  test_input.xml  your_json_file
.ipynb_checkpoints/: 20230213_GeoJSON_to_xml-checkpoint.ipynb  20230213_GeoJSON_to_xml_simplified-checkpoint.ipynb  20230220_Placenta_018_Scene1_all-checkpoint.ipynb  20230308_QuPath_to_LMD-checkpoint.ipynb  20230308_QuPath_to_LMD_JoseCalibPoints-checkpoint.ipynb  GeoJSON_to_xml-checkpoint.ipynb  JSON to python-checkpoint.ipynb  Qupath_to_lmdpy-checkpoint.ipynb
2_custom_wells_and_samples/: 20230214_Creating_custom_sample_wells_placenta.ipynb  example_samples_and_wells.txt  samples_and_wells_for_384wp.txt  samples_and_wells_for_96wp.txt  saved_dict.json
3_well_names_as_QuPath_Classes/: classes.json  create_classes_for_qupath.ipynb
5_test_qupath_project/: project.qpproj  project.qpproj.backup
5_test_qupath_project/classifiers/: classes.json
Cellpose_integration/test_geojson/: 2023_02_02__CD163_CD31_CDH1.geojson
QuPath_scripts/: detections_to_annotations.groovy
Tutorial/: Run_Locally.ipynb
assets/: ZeissPALM_format.txt  ZeissPALM_format_subset.txt  classes.json  test2.txt  zeiss_test.txt
demo_Qupath_project/: Single_cells.geojson  TD_01_verysmall_mIF.geojson  demo_samples_and_wells.txt  project.qpproj  project.qpproj.backup
demo_Qupath_project/QuPath_scripts/: detections_to_annotations.groovy  select_random_detections.groovy
demo_Qupath_project/classifiers/: classes.json
demo_Qupath_project/data/1/: data.qpdata  server.json  summary.json
demo_Qupath_project/output/: _TD_01_verysmall_mIF._384_wellplate.csv
demo_Qupath_project/tmp/: 20251117_P09_Liposarcoma_HE_membraneslide2_1_4041-25_ScanRegion2.geojson  Slide2Scene2_samplesandwells.txt
example_output/: 20230928_150455_384_wellplate.csv  20231201_123441_contours.xml  classes.json
functions/: utils.py
history/: 384_wellplate.csv  LMD_ready_contours.xml  QuPath_to_LMD copy.ipynb  QuPath_to_LMD.ipynb
inputs_that_dont_work/: Example_2.geojson  Example_2.xlsx  samplesandwells.txt
old_versions/: 20230213_Create_custom_samples_and_wells.ipynb  20230217_QuPath_to_LMD.ipynb  20230307_QuPath_to_LMD.ipynb  384-well_plate.ipynb
old_versions/.ipynb_checkpoints/: 20230217_QuPath_to_LMD-checkpoint.ipynb  384-well_plate-checkpoint.ipynb
src/qupath_to_lmd/: core.py  geojson_utils.py  mock_streamlit.py  st_cached.py  utils.py  well_plate.py
test_geojson_files/: 03012023_JN.geojson  2022_12_14_CD163_1-100_ph6.geojson  2023_02_02__CD163_CD31_CDH1.geojson  2023_02_02__CD163_CD31_CDH1_CTB2.geojson  objects.geojson  objects2.geojson
test_output_xml_files/: first_collection.xml  first_collection_no_capid.xml  placenta_singletissue_wCapID_qupath.xml  vessels.xml
tests/: test_geojson_utils.py  test_st_cached.py  test_streamlit_app.py  test_utils.py
tests/data/: test.csv  test.geojson  test.group_labelled_shapes.geojson  test_low_intersection.geojson  test_missing_classification.geojson  test_multipolygon.geojson  test_point.geojson
tracebacks/: loguru_import.txt
